--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue.srikanth553.store:8080/; }
-        location /api/user/ { proxy_pass http://user.daws84s.site:8080/; }
+        location /api/user/ { proxy_pass http://user.srikanth553.store:8080/; }
         location /api/cart/ { proxy_pass http://cart.daws84s.site:8080/; }
         location /api/shipping/ { proxy_pass http://shipping.daws84s.site:8080/; }
         location /api/payment/ { proxy_pass http://payment.daws84s.site:8080/; }
